# Esercitazione_0

./: nomedelfile.txt  pippo
esercitazione1/: CMakeLists.txt  printargs.cpp  stampa_medie.cpp
esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  myproject
esercitazione2/: CMakeLists.txt  esercizio1.cpp  esercizio2.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  Sorts.hpp  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
